# media-player-controller

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: bytes.rs  main.rs  mpris.rs
src/ctrl_surf/: data.rs  error.rs  event.rs  factory.rs  mod.rs  msg.rs  response.rs
src/ctrl_surf/device/: mod.rs  xtouch.rs
src/ctrl_surf/imp/: mackie.rs  mod.rs  xtouch_one_mackie.rs
src/ctrl_surf/protocol/: mackie.rs  mod.rs
src/midi/: error.rs  io.rs  mod.rs  msg.rs  port.rs
src/ui/: app.rs  controller.rs  ctrl_surf.rs  dispatcher.rs  mod.rs  mpris.rs  player.rs  port.rs
