[package]
name = "mpris-controller"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["Multimedia"]
keywords = ["mpris", "midi", "controller"]
description = "Control an MPRIS player from a Universal Control Surface"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fengalin/mpris-controller"
edition = "2021"

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "0.5"
eframe = { version = "0.17", features = ["persistence"] }
env_logger = "0.9"
image = "0.24"
log = "0.4"
midir = "0.7"
# Use revision due to
# - https://github.com/Mange/mpris-rs/pull/61
# - https://github.com/Mange/mpris-rs/pull/62
mpris = { git = "https://github.com/Mange/mpris-rs", rev = "8cfe48172d56ddf2b3256af78ad57be20a57540e" }
once_cell = "1.0"
thiserror = "1.0"
timer = "0.2.0"
