[package]
name = "media-player-controller"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["Multimedia"]
keywords = ["mpris", "midi", "controller"]
description = "Control a media player (MPRIS for now) from a Universal Control Surface"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fengalin/media-player-controller"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "1.3.2"
chrono = "0.4.19"
crossbeam-channel = "0.5"
eframe = { version = "0.20.1", features = ["persistence"] }
env_logger = "0.10"
image = "0.24"
log = "0.4"
midir = "0.9"
mpris = "2.0"
once_cell = "1.0"
pulsectl = { package = "pulsectl-rs", version = "0.3.2", optional = true }
thiserror = "1.0"
timer = "0.2.0"

[features]
default = ["pulsectl"]

[profile.release]
lto = true
